# CoreWar

./: AUTHORS  README  README.md  README_BBS.md  run_leaderboard.pl
doc/: BeginnersGuide2CoreWars.html
doc/MarkDurhamsTutorials/: durham1.html  durham2.html
doc/StevenMorrelBook/: book1.html  book2.html
doc/StevesGuide4Beginners/: sgb1.txt  sgb2.txt  sgb3.txt  sgb4.txt  sgb5.txt  sgb6.txt  sgb7.txt  sgb8.txt  sgb9.txt
offsite/DaveHillis/: BedbugOperetta.red  SappyHarmonica.red
offsite/Fizmo/: Sneaky_B2.red
offsite/John/: 94nop_Sputnik.red  Rise_of_the_dragon.red
offsite/JohnMetcalf/: Flux.red  TableScanII.red
offsite/Neogryzor/: T-Frez.red
offsite/Olympus/: Confetti.red  PaleShears3.red  People.red  QComp-Hunterv2.2.red  REDRAIN.red  Rock.red  SNAKE.red  bunkert3.red  dwarf.red
offsite/P.Kline/: SplendoredThing.red
offsite/P.Thorne/: BinaryDingus.red  BubblyCreekA.red  BubblyCreekB.red  BubblyCreekD.red  CMoth.red  ConNaph.red  DireWolf.red  Doughnet.red  DrQuinn.red  EarpJnr.red  EdgarVariation.red  ExSnail.red  FatExpansion.red  FilchD.red  HungryJack.red  JollyJumper.red  KandiasKan.red  LateEight.red  LoClair.red  Loser-Baby.red  LuckyLuke.red  Luke_n_Vader.red  MorbidDreadIV.red  OnceIn88.red  Ossilaslurp.red  Piltdown_2003.red  Pruns.red  QuestInTime.red  Quilt-35.red  Quilt-35c.red  Quilt-35f.red  Quincy.red  SlimyTimeVamp.red  SnailDVD.red  Snurp.red  SnurpIII.red  SnurpVa.red  TinyLuke.red  ToxicSpirit.red  ToxicSpiritII.red  (+9 more)
offsite/ParaInrisFr/: FireandIceII.red  LaVibra.red  Mani24.red  Mani5.red  PureMorning.red  ReallyFrenzy.red  ReallyFrenzyII.red  RevivalFire.red  airbagfrenzy.red  clearance.4.red
offsite/PhantomL/: TurnOver.red
offsite/RoyVanRijn/: Zygote.red
offsite/S.Fernandes/: Scorpion.red  Twilight.red
offsite/SimonWainwright/: MenAreFrom_pMARS.red
offsite/SteveGunnell/: Basilisk_B8.red  Zeppelin_B11.red
offsite/TerryNewton/: LittleRedHat.red  Nano3551.red  SleepyLepus.red  TransferFunction.red
offsite/ZulNadzri/: LargerThanInfinity.red
offsite/inversed/: 88_Triangular_Sun.red  Infiltrator.red  LP_Assault_On_Mirage.red  LP_Microdrive.red  Monolith.red  Odachi.red  Tiny_Little_Fluffy_Clouds.red  Tiny_Synergy.red  Tiny_Yukikaze.red
src/: Makefile  Makefile.am  None  cdb.c  config.status  configure  configure.in  corewar.pl  foobar  global.h  str_eng.c
src/autom4te.cache/: output.0  requests  traces.0
warriors/: bubbly_sort.red  fern.red  shelter.red
